# dslr

./: .gitignore  describe.py  histogram.py  historygram.py  logisticRegression.py  logreg_predict.py  logreg_train.py  pair_plot.py  pyproject.toml  requirements.txt  scatter_plot.py
.github/workflows/: lint.yml
gradient_descent/: MBGD.py  README.md  SGD.py
model/: LogisticRegression.py  weight_lr.csv
src/: describe.py
src/statistics/: stats.py  test_stats.py
src/stats_tools/: stats.py
stats/: StatsContainer.py  __init__.py  stats.py  test_stats.py
utils/: __init__.py  count.py  ft_accuracy_score.py  get_data_per_feature.py  load.py  load_csv.py  max.py  mean.py  min.py  percentiles.py  preprocess_data_LR.py  quartile.py  separate_data_per_feature_per_house.py  statistic.py  std.py  sum.py  transform_df_nan_to_mean.py
