[tool.poetry]
name = "dslr"
version = "0.1.0"
description = ""
authors = ["mpochard"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
ruff = "^0.4.10"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "UP", "D"]


[tool.ruff.lint.pydocstyle]
convention = "google"

